--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "signicat",
-  "version": "1.1.3",
-  "description": "Signicat integration with authentication",
+  "version": "0.9.1",
+  "description": "Signicat integration with authentication by ILOapps.es",
   "main": "index.js",
   "scripts": {
     "test": "gulp mocha",
-    "coverage": "nyc mocha"
+    "coverage": "nyc mocha",
+    "release": "release-it && npx auto-changelog && git add CHANGELOG.md && git commit -m 'Update CHANGELOG' && git push"
   },
-  "author": "Ilo Applications S.L",
+  "author": "ILO Applications S.L.",
   "license": "Apache-2.0",
   "dependencies": {
     "node-jose": "2.0.0",
@@ -37,12 +38,14 @@
     "nyc": "14.1.1",
     "should": "13.2.1",
     "sinon": "7.3.2",
-    "sinon-chai": "3.3.0"
+    "sinon-chai": "3.3.0",
+    "release-it": "14.5.1"
   },
   "directories": {
     "test": "test"
   },
   "keywords": [
-    "signicat"
+    "signicat",
+    "iloapps"
   ]
 }
