--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "ILO Applications S.L.",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.24.0",
     "node-jose": "2.0.0",
+    "qs": "^6.10.2",
     "validator": "11.0.0"
   },
   "devDependencies": {
@@ -35,11 +37,12 @@
     "jshint-stylish": "2.2.1",
     "mocha": "5.0.0",
     "mocha-junit-reporter": "1.22.0",
+    "nock": "^13.2.1",
     "nyc": "14.1.1",
+    "release-it": "14.5.1",
     "should": "13.2.1",
     "sinon": "7.3.2",
-    "sinon-chai": "3.3.0",
-    "release-it": "14.5.1"
+    "sinon-chai": "3.3.0"
   },
   "directories": {
     "test": "test"
