--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "author": "ILO Applications S.L.",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.24.0",
-    "node-jose": "2.0.0",
-    "qs": "^6.10.2",
+    "axios": "0.27.2",
+    "node-jose": "2.1.1",
+    "qs": "6.10.3",
     "validator": "11.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.4",
-    "@babel/preset-env": "7.4.4",
-    "babel-eslint": "10.0.1",
-    "chai": "4.2.0",
+    "@babel/core": "7.17.10",
+    "@babel/preset-env": "7.17.10",
+    "babel-eslint": "10.1.0",
+    "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
     "eslint": "5.16.0",
     "gulp": "4.0.2",
@@ -30,19 +30,19 @@
     "gulp-jshint": "2.1.0",
     "gulp-lintspaces": "1.0.1",
     "gulp-mocha": "6.0.0",
-    "gulp-nodemon": "2.4.2",
-    "gulp-stubby-server": "0.2.1",
-    "jshint": "2.10.2",
+    "gulp-nodemon": "2.5.0",
+    "gulp-stubby-server": "0.4.0",
+    "jshint": "2.13.4",
     "jshint-jenkins-checkstyle-reporter": "0.1.2",
     "jshint-stylish": "2.2.1",
     "mocha": "5.0.0",
     "mocha-junit-reporter": "1.22.0",
-    "nock": "^13.2.1",
+    "nock": "13.2.4",
     "nyc": "14.1.1",
     "release-it": "14.5.1",
-    "should": "13.2.1",
+    "should": "13.2.3",
     "sinon": "7.3.2",
-    "sinon-chai": "3.3.0"
+    "sinon-chai": "3.7.0"
   },
   "directories": {
     "test": "test"
